<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/display"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            android:gravity="right"
            android:textColor="#505050"
            android:textSize="40sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/sign"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:minWidth="60dip"
                    android:onClick="onClickButton"
                    android:text="@string/sign" 
                    android:background="@drawable/button_gray"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/seven"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:minWidth="60dip"
                    android:onClick="onClickButton"
                    android:text="7" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/eight"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:minWidth="60dip"
                    android:onClick="onClickButton"
                    android:text="8" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/nine"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:minWidth="60dip"
                    android:onClick="onClickButton"
                    android:text="9" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/divide"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:minWidth="60dip"
                    android:onClick="onClickButton"
                    android:text="@string/divide" 
                    android:background="@drawable/button_gray"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/clear"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="@string/clear" 
                    android:background="@drawable/button_red"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/four"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="4" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/five"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="5" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/six"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="6" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/times"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="@string/times" 
                    android:background="@drawable/button_gray"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/allclear"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="@string/allclear" 
                    android:background="@drawable/button_red"
                    android:textSize="40sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/one"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="1" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="2" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="3" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="@string/minus" 
                    android:background="@drawable/button_gray"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/zero"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="0" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/doublezero"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="00" 
                    android:background="@drawable/button_black"
                    android:textSize="45sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/comma"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="@string/comma" 
                    android:background="@drawable/button_black"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/equal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="@string/equal" 
                    android:background="@drawable/button_gray"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>

                <Button
                    android:id="@+id/plus"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClickButton"
                    android:text="@string/plus" 
                    android:background="@drawable/button_gray"
                    android:textSize="50sp"
                    android:textColor="#FFFFFF">
                </Button>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>